# keyvee

./: .gitignore  .platform.app.yaml  docker-compose.yml  manage.py  pyproject.toml
.platform/: routes.yml  services.yaml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_blob_created_blob_updated.py  0003_rename_owner_blob_namespace_and_more.py
keyvee/: asgi.py  settings.py  urls.py  wsgi.py
